--- a/C2BrowserPlugin/C2BrowserPlugin.vcxproj.filters
+++ b/C2BrowserPlugin/C2BrowserPlugin.vcxproj.filters
@@ -35,5 +35,11 @@
     <ClInclude Include="Lib\MinHook\src\hde\table64.h" />
     <ClInclude Include="Lib\MinHook\src\buffer.h" />
     <ClInclude Include="Lib\MinHook\include\MinHook.h" />
+    <ClInclude Include="include\main.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\sigs.h">
+      <Filter>Source Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
